--- a/index.html
+++ b/index.html
@@ -1,60 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Math Reviewer</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Login and Signup System</title>
+  <link rel="stylesheet" type="text/css" href="SignupLogin.css">
 </head>
 <body>
-
-    <header class="header">
-        <a href="">
-            <i class="fas fa-bars"></i>
-        </a>
-        <input type="text" placeholder="Search">
-        <div>
-            <a class="a">
-                Sign in
-            </a>
-            <a class="a">
-                Sign up
-            </a>
-        </div>
-    </header>   
-
-    <main>
-
-        <div class="content">
-            <div class="container">
-                <div class="box orange">
-                </div>
-                <button>Go to Arithmetic</button>
-            </div>
-            <div class="container">
-                <div class="box pink">
-
-                </div>
-                <button>Go to Algebra</button>
-            </div>
-            <div class="container">
-                <div class="box green">
-
-                </div>
-                <button>Go to Geometry</button>
-            </div>
-            <div class="container">
-                <div class="box orangered">
-
-                </div>
-                <button>Go to Trigonometry</button>
-            </div>
-        </div>
-
-    </main>
-
-    <footer>
-
-    </footer>
-
+  <div class="container">
+    <div class="form-container">
+      <h2>Login</h2>
+      <form id="login-form">
+        <input type="text" id="login-email" placeholder="Email" required>
+        <input type="password" id="login-password" placeholder="Password" required>
+        <button type="submit" id="login-button">Login</button>
+      </form>
+    </div>
+    <div class="form-container">
+      <h2>Signup</h2>
+      <form id="signup-form">
+        <input type="text" id="signup-name" placeholder="Name" required>
+        <input type="text" id="signup-email" placeholder="Email" required>
+        <input type="password" id="signup-password" placeholder="Password" required>
+        <button type="submit"id = 'sign-up-button'>Signup</button>
+      </form>
+    </div>
+  </div>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+  <script src="firebase.js"></script>
+  <script type = 'module' src="Signup.js"></script>
+  <script type = 'module' src="Login.js"></script>
 </body>
 </html>
