--- a/Home.html
+++ b/Home.html
@@ -23,25 +23,25 @@
             <div class="container">
                 <div class="box orange">
                 </div>
-                <button>Go to Arithmetic</button>
+                <a href="./Arithmetic.html"> Go to Arithmetic </a>
             </div>
             <div class="container">
                 <div class="box pink">
 
                 </div>
-                <button>Go to Algebra</button>
+                <a href="./Algebra.html"> Go to Algebra </a>
             </div>
             <div class="container">
                 <div class="box green">
 
                 </div>
-                <button>Go to Geometry</button>
+                <a href="./Geometry.html"> Go to Geometry </a>
             </div>
             <div class="container">
                 <div class="box orangered">
 
                 </div>
-                <button>Go to Trigonometry</button>
+                <a href="./Trigonometry.html"> Go to Trigonometry </a>
             </div>
         </div>
 
@@ -52,4 +52,5 @@
     </footer>
 
 </body>
+
 </html>
