--- a/Home.html
+++ b/Home.html
@@ -23,13 +23,13 @@
             <div class="container">
                 <div class="box orange">
                 </div>
-                <a href="./Arithmetic.html"> Go to Arithmetic </a>
+                <a href="./linear_relations.html"> Go to Linear Relations </a>
             </div>
             <div class="container">
                 <div class="box pink">
 
                 </div>
-                <a href="./Algebra.html"> Go to Algebra </a>
+                <a href="./Statistics.html"> Go to Statistics </a>
             </div>
             <div class="container">
                 <div class="box green">
