--- a/linear_relations.html
+++ b/linear_relations.html
@@ -4,6 +4,7 @@
   <title> Linear Relations </title>
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" href="./styles/navigation.css">
+  <link rel="stylesheet" href="./styles/content.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -27,6 +28,7 @@
             </div>
 
             <div class="link-wrapper">
+                <h3> QUICK LINKS TO TOPICS </h3>
                 <a href="">Points on the Cartesian Plane</a> <br>
                 <a href="">Slope of a Line</a> <br>
                 <a href="">Equation of a Line (y=ax+b)</a> <br>
@@ -40,33 +42,42 @@
             </div>
 
             <div class="wrapper">
-                <a class="box">
+                <a class="box-link">
                     Topic List
                 </a>
-                <a class="box">
+                <a class="box-link">
                     Notes & Formulas
                 </a>
-                <a class="box">
-                    Workbook
+                <a class="box-link">
+                    Exercise
+                </a>
+            </div>
+        </div>
+
+        <div class="lessons">
+            
+            <div class="title">
+                Points on the Cartesian Plane
+            </div>
+            <div class="wrapper">
+                <a class="box-link">
+                    Video Lesson
+                </a>
+                <a class="box-link">
+                    Practice Problems and Answers
                 </a>
             </div>
 
-            <div class="content">
-                <div class="text-wrapper">
-                    <h1> Linear Relations </h1>
-                </div>
-
-                <div class="wrapper">
-                    <a class="box">
-                        Topic List
-                    </a>
-                    <a class="box">
-                        Notes & Formulas
-                    </a>
-                    <a class="box">
-                        Workbook
-                    </a>
-                </div>
+            <div class="title">
+                Points on the Cartesian Plane
+            </div>
+            <div class="wrapper">
+                <a class="box-link">
+                    Video Lesson
+                </a>
+                <a class="box-link">
+                    Practice Problems and Answers
+                </a>
             </div>
         </div>
 
