--- a/linear_relations.html
+++ b/linear_relations.html
@@ -12,7 +12,7 @@
     <nav>
         <a> HOME </a>
         <a> ABOUT </a>
-        <a> UNIT 1 </a>
+        <a href="./linear_relations.html"> UNIT 1 </a>
         <a> UNIT 2 </a>
         <a> UNIT 3 </a>
         <a> UNIT 4 </a>
@@ -42,42 +42,140 @@
             </div>
 
             <div class="wrapper">
-                <a class="box-link">
+                <a class="box-link"href="#lessons">
                     Topic List
                 </a>
-                <a class="box-link">
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ea15d1758e2a7af1b366/1492445720757/CST+4+Notes+-+Linear.pdf" target="_blank">
                     Notes & Formulas
                 </a>
-                <a class="box-link">
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4ea4f893fc07c27b2b70b/1492445793985/Workbook+-+LINEAR.pdf" target="_blank">
                     Exercise
                 </a>
             </div>
         </div>
 
-        <div class="lessons">
+        <div class="lessons" id = "lessons">
             
             <div class="title">
                 Points on the Cartesian Plane
             </div>
             <div class="wrapper">
-                <a class="box-link">
+                <a class="box-link" href="https://www.youtube.com/watch?v=TqVtv9a_OG8&list=PL8huMKDf0j8o6_0Nh-x9fy7GLhqPUNOrN" target="_blank">
                     Video Lesson
                 </a>
-                <a class="box-link">
+                <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55d391b631bc59d0d2986/1492475196373/POINTS+ON+THE+CARTESIAN+PLANE+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+           <div class="title">
+                Slope of a Line
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=1i1sMHpjHBE&list=PL8huMKDf0j8qE3d3_0FDkRUCDnO43aCr-" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55d75be6594319f59ca07/1492475254870/SLOPE+OF+A+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+             <div class="title">
+                Equations of a Line (y=ax+b)
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=vkTXDGpzy3U&list=PL8huMKDf0j8rh9JGGQRypO7j25p7EVz7l" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/5a14699c0d92975367e18bab/1511287203758/EQUATION+OF+A+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
                     Practice Problems and Answers
                 </a>
             </div>
 
             <div class="title">
-                Points on the Cartesian Plane
+                Exceptions in (y=ax+b)
             </div>
             <div class="wrapper">
-                <a class="box-link">
+                <a class="box-link"href="https://www.youtube.com/watch?v=z9T_aP_GjOY&list=PL8huMKDf0j8o0zexqooQk7WDS160R6VKY" target="_blank">
                     Video Lesson
                 </a>
-                <a class="box-link">
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55e2db8a79b4768c63193/1492475440528/EXCEPTIONS+IN+THE+EQUATION+OF+A+LINE+PRACTICE+PROBLEMS.pdf" target="_blank">
                     Practice Problems and Answers
                 </a>
+            </div>
+
+            <div class="title">
+               X & Y Intercepts
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=gKBVQJuWez4&list=PL8huMKDf0j8qL2niU7yZSHM1bLaBrQCI5" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f55e9ed2b857170c99ef7e/1492475558121/X-+AND+Y-INTERCEPTS+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+            <div class="title">
+               Parallel Lines
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=Sk4_l7wtODk&list=PL8huMKDf0j8pILDbGnte0UjukzVk76knX" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f560dbe4fcb545b9f9af37/1492476128990/PARALLEL+LINES+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+            <div class="title">
+                Perpendicular Lines
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=FeEGRKVqNMA&list=PL8huMKDf0j8oJ8RF-q_ufdmqvS-acretz" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f561796b8f5b633222131e/1492476287417/PERPENDICULAR+LINES+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+            <div class="title">
+                Solving a System of Equations
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=HUa9Cl8XpXY&list=PL8huMKDf0j8qI4r-2h_onJFQPa1oUoI6K" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f562ce8419c294a6ea5a08/1492476624289/SYSTEMS+OF+EQUATIONS+-+SUBSTITUTION+METHOD+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+            <div class="title">
+               Comparison Method
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=3kdMCbeJWMA&list=PL8huMKDf0j8qCS0ig4skVt_JKm0KQqNEW" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f5637be6f2e1ab28c064f8/1492476803733/SYSTEMS+OF+EQUATIONS+-+COMPARISON+METHOD+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
+            <div class="title">
+                Elimination Method
+            </div>
+            <div class="wrapper">
+                <a class="box-link"href="https://www.youtube.com/watch?v=lp7SFojHYvY&list=PL8huMKDf0j8r0kiuW5O2eCVxk42xfU62R" target="_blank">
+                    Video Lesson
+                </a>
+                <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f563c5bebafbf679d7930c/1492476873546/SYSTEMS+OF+EQUATIONS+-+ELIMINATION+METHOD+PRACTICE+PROBLEMS.pdf" target="_blank">
+                    Practice Problems and Answers
+                </a>
+            </div>
+
             </div>
         </div>
 
