--- a/Home.html
+++ b/Home.html
@@ -3,9 +3,19 @@
 <head>
   <title>Math Reviewer</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" href="./styles/navigation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
+    <nav>
+        <a href="./Home.html"> HOME </a>
+        <a> ABOUT </a>
+        <a href="./linear_relations.html"> UNIT 1 </a>
+        <a href="./Statistics.html"> UNIT 2 </a>
+        <a href="Geometry.html"> UNIT 3 </a>
+        <a href="Trigonometry.html"> UNIT 4 </a>
+    </nav>
 
     <header class="header">
         <a href="">
