--- a/Trigonometry.html
+++ b/Trigonometry.html
@@ -3,43 +3,114 @@
 <head>
   <title> Trigonometry </title>
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" href="./styles/navigation.css">
+  <link rel="stylesheet" href="./styles/content.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-    <header class="header">
-        <a href="">
-            <i class="fas fa-bars"></i>
-        </a>
-        <input type="text" placeholder="Search">
-        <div>
-           
-        </div>
-    </header>   
+    <nav>
+        <a href="./Home.html"> HOME </a>
+        <a> ABOUT </a>
+        <a href="./linear_relations.html"> UNIT 1 </a>
+        <a href="./Statistics.html"> UNIT 2 </a>
+        <a href="Geometry.html"> UNIT 3 </a>
+        <a href="Trigonometry.html"> UNIT 4 </a>
+    </nav>
 
     <main class="orangered">
-
         <div class="content">
-            <div class="container">
-                <div class="box green">
-                </div>
-            </div>
-            <div class="container">
-                <div class="box green">
 
-                </div>
-            </div>
-            <div class="container">
-                <div class="box green">
-
-                </div>
-            </div>
-            <div class="container">
-                <div class="box green">
-
-                </div>
-            </div>
+        <div class="text-wrapper">
+            <h2>Unit number 4:</h2>
+            <h1> Trigonometry </h1>
         </div>
+
+        <div class="link-wrapper">
+            <h3> QUICK LINKS TO TOPICS </h3>
+            <a href="">Pythagoras</a> <br>
+            <a href="">Soh Cah Toa</a> <br>
+            <a href="">Sine Law</a> <br>
+            <a href="">Hero's Formula</a> <br>
+            <a href="">Trig Formula</a> <br>
+        </div>
+
+        <div class="wrapper">
+            <a class="box-link"href="#lessons">
+                Topic List
+            </a>
+            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4be7cf7e0ab2b0efe7267/1492434565198/CST+4+Notes+-+Trig.pdf" target="_blank">
+                Notes & Formulas
+            </a>
+            <a class="box-link"href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4c38ae58c62bb162b553f/1492435854788/Workbook+-+TRIG.pdf" target="_blank">
+                Exercise
+            </a>
+        </div>
+    </div>
+
+    <div class="lessons" id = "lessons">
+            
+        <div class="title">
+            Pythagoras
+        </div>
+        <div class="wrapper">
+            <a class="box-link" href="https://www.youtube.com/watch?v=lGlM2uLxAWA&list=PL8huMKDf0j8odVRQ0fEkcvmnLpqFU71PU" target="_blank">
+                Video Lesson
+            </a>
+            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de37f5e231caaec99a99/1492442680565/PYTHAGORAS+PRACTICE+PROBLEMS.pdf" target="_blank">
+                Practice Problems and Answers
+            </a>
+        </div>
+
+        <div class="title">
+            Soh Cah Toa
+        </div>
+        <div class="wrapper">
+            <a class="box-link" href="https://www.youtube.com/watch?v=SSCdiddA_A4&list=PL8huMKDf0j8qWrE0z0BJJKgQ7pLRK49FC" target="_blank">
+                Video Lesson
+            </a>
+            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de4d725e2511d877b5d9/1492442702390/SOH+CAH+TOA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                Practice Problems and Answers
+            </a>
+        </div>
+
+        <div class="title">
+            Sine Law
+        </div>
+        <div class="wrapper">
+            <a class="box-link" href="https://www.youtube.com/watch?v=eliI8iCF6W8&list=PL8huMKDf0j8omfbPBKB6dwsMwOV9ZDqCK" target="_blank">
+                Video Lesson
+            </a>
+            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de673a041105c363891a/1492442728902/SINE+LAW+PRACTICE+PROBLEMS.pdf" target="_blank">
+                Practice Problems and Answers
+            </a>
+        </div>
+
+        <div class="title">
+            Hero's Formula
+        </div>
+        <div class="wrapper">
+            <a class="box-link" href="https://www.youtube.com/watch?v=S2latZsIRzM&list=PL8huMKDf0j8phR4aUWYJ9yhB2hXsWT0yw" target="_blank">
+                Video Lesson
+            </a>
+            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de7f20099e782fd49aac/1492442751767/HERO%27S+FORMULA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                Practice Problems and Answers
+            </a>
+        </div>
+
+        <div class="title">
+            Trig Formula
+        </div>
+        <div class="wrapper">
+            <a class="box-link" href="https://www.youtube.com/watch?v=cxUaiPWFXdI&list=PL8huMKDf0j8rEuFs8Dk6CQG9rUEDRB2YE" target="_blank">
+                Video Lesson
+            </a>
+            <a class="box-link" href="https://static1.squarespace.com/static/58dc5121ebbd1af18052424a/t/58f4de95b3db2bd6d3a71887/1492442774762/SAS_2+%28PINCH%29+AREA+PRACTICE+PROBLEMS.pdf" target="_blank">
+                Practice Problems and Answers
+            </a>
+        </div>
+
+    </header>   
 
     </main>
 
