--- a/linear_relations.html
+++ b/linear_relations.html
@@ -10,13 +10,12 @@
 <body>
 
     <nav>
-        <a> HOME </a>
+        <a href="./Home.html"> HOME </a>
         <a> ABOUT </a>
         <a href="./linear_relations.html"> UNIT 1 </a>
-        <a> UNIT 2 </a>
-        <a> UNIT 3 </a>
-        <a> UNIT 4 </a>
-        <a> UNIT 5 </a>
+        <a href="./Statistics.html"> UNIT 2 </a>
+        <a href="Geometry.html"> UNIT 3 </a>
+        <a href="Trigonometry.html"> UNIT 4 </a>
     </nav>
 
     <main class="orange">
