--- a/public/linear_relations.html
+++ b/public/linear_relations.html
@@ -18,6 +18,13 @@
         <a href="Trigonometry.html"> UNIT 4 </a>
     </nav>
 
+    <header class="header">
+        <input type="text" placeholder="Search">
+        <div>
+           
+        </div>
+    </header>  
+
     <main class="orange">
         <div class="content">
 
