--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
-  <script src="firebase.js"></script>
-  <script type = 'module' src="Signup.js"></script>
-  <script type = 'module' src="Login.js"></script>
+  <script src="./Firebase.js"></script>
+  <script type = 'module' src="./Signup.js"></script>
+  <script type = 'module' src="./Login.js"></script>
 </body>
 </html>
