redirects, log out button

--- a/public/Geometry.html
+++ b/public/Geometry.html
@@ -101,4 +101,11 @@
 
 </body>
 
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+<script src="./Firebase.js"></script>
+<script src="./user-check.js"></script>
+
 </html>
