--- a/public/Trigonometry.html
+++ b/public/Trigonometry.html
@@ -16,6 +16,7 @@
         <a href="./Statistics.html"> UNIT 2 </a>
         <a href="Geometry.html"> UNIT 3 </a>
         <a href="Trigonometry.html"> UNIT 4 </a>
+        <button id="log-out-button"> Log out </button>
     </nav>
 
     <header class="header">
@@ -126,5 +127,12 @@
     </footer>
 
 </body>
+
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+<script src="./Firebase.js"></script>
+<script src="./user-check.js"></script>
 
 </html>
