--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 <script src="./Firebase.js"></script>
-<script src="./user-check.js"></script>
+<script src="./session.js"></script>
 
 </html>
