--- a/public/Sign-in.html
+++ b/public/Sign-in.html
@@ -7,20 +7,22 @@
 <body>
   <div class="container">
     <div class="form-container">
+      <h1> XYZ Mastery </h1>
       <h2>Login</h2>
       <form id="login-form">
         <input type="text" id="login-email" placeholder="Email" required>
         <input type="password" id="login-password" placeholder="Password" required>
         <button type="submit" id="login-button">Login</button>
-      </form>
-    </div>
-    <div class="form-container">
-      <h2>Signup</h2>
-      <form id="signup-form">
-        <input type="text" id="signup-name" placeholder="Name" required>
-        <input type="text" id="signup-email" placeholder="Email" required>
-        <input type="password" id="signup-password" placeholder="Password" required>
-        <button type="submit"id = 'sign-up-button'>Signup</button>
+        <div class="wrapper">
+          <p> or </p>
+        </div>
+        <button class="white" type="submit" id="google-button">
+          Continue with Google
+        </button>
+        <div class="wrapper">
+          <p>Don't have an account?</p>
+          <a href="Sign-up.html">Sign up</a>
+        </div>
       </form>
     </div>
   </div>
@@ -29,7 +31,8 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
   <script src="./Firebase.js"></script>
-  <script type = 'module' src="./Signup.js"></script>
   <script type = 'module' src="./Login.js"></script>
+  <script src="./google-login.js"></script>
+
 </body>
 </html>
