--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,17 @@
 <body>
 
     <nav>
-        <a href="./Home.html"> HOME </a>
-        <a> ABOUT </a>
-        <a href="./linear_relations.html"> UNIT 1 </a>
-        <a href="./Statistics.html"> UNIT 2 </a>
-        <a href="Geometry.html"> UNIT 3 </a>
-        <a href="Trigonometry.html"> UNIT 4 </a>
-        <button id="log-out-button"> Log out </button>
-    </nav>
-
-    <header class="header">
-        <input type="text" placeholder="Search">
         <div>
-           
+            <a href="./Home.html"> HOME </a>
+            <a> ABOUT </a>
+            <a href="./linear_relations.html"> UNIT 1 </a>
+            <a href="./Statistics.html"> UNIT 2 </a>
+            <a href="Geometry.html"> UNIT 3 </a>
+            <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
-    </header>   
+        <button id="log-out-button"> Log out </button>
+        <button id="sign-in-button"> Sign in </button>
+    </nav>
 
     <main>
 
