search bar removed

--- a/public/Geometry.html
+++ b/public/Geometry.html
@@ -10,20 +10,16 @@
 <body>
 
     <nav>
-        <a href="./Home.html"> HOME </a>
-        <a> ABOUT </a>
-        <a href="./linear_relations.html"> UNIT 1 </a>
-        <a href="./Statistics.html"> UNIT 2 </a>
-        <a href="Geometry.html"> UNIT 3 </a>
-        <a href="Trigonometry.html"> UNIT 4 </a>
-    </nav>
-
-    <header class="header">
-        <input type="text" placeholder="Search">
         <div>
-           
+            <a href="./Home.html"> HOME </a>
+            <a> ABOUT </a>
+            <a href="./linear_relations.html"> UNIT 1 </a>
+            <a href="./Statistics.html"> UNIT 2 </a>
+            <a href="Geometry.html"> UNIT 3 </a>
+            <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
-    </header>  
+        <button id="log-out-button"> Log out </button>
+    </nav>
 
     <main class="slateblue">
         <div class="content">
