--- a/public/Sign-in.html
+++ b/public/Sign-in.html
@@ -10,7 +10,7 @@
       <h1> XYZ Mastery </h1>
       <h2>Login</h2>
       <form id="login-form">
-        <input type="text" id="login-email" placeholder="Email" required>
+        <input type="text" id="login-email" placeholder="Username" required>
         <input type="password" id="login-password" placeholder="Password" required>
         <button type="submit" id="login-button">Login</button>
         <div class="wrapper">
