--- a/public/Sign-up.html
+++ b/public/Sign-up.html
@@ -12,7 +12,7 @@
           <h1> XYZ Mastery </h1>
             <h2>Signup</h2>
             <form id="signup-form">
-              <input type="text" id="signup-name" placeholder="Name" required>
+              <input type="text" id="signup-name" placeholder="Username" required>
               <input type="text" id="signup-email" placeholder="Email" required>
               <input type="password" id="signup-password" placeholder="Password" required>
               <button type="submit"id = 'sign-up-button'>Signup</button>
