--- a/public/Statistics.html
+++ b/public/Statistics.html
@@ -11,7 +11,7 @@
 
     <nav>
         <div>
-            <a href="./Home.html"> HOME </a>
+            <a href="./index.html"> HOME </a>
             <a> ABOUT </a>
             <a href="./linear_relations.html"> UNIT 1 </a>
             <a href="./Statistics.html"> UNIT 2 </a>
