--- a/public/Trigonometry.html
+++ b/public/Trigonometry.html
@@ -18,7 +18,10 @@
             <a href="Geometry.html"> UNIT 3 </a>
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
-        <button id="log-out-button"> Log out </button>
+        <div>
+            <img id="user-photo">
+            <button id="log-out-button"> Log out </button>
+        </div>
     </nav>
 
     <main class="orangered">
@@ -128,6 +131,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 <script src="./Firebase.js"></script>
-<script src="./user-check.js"></script>
+<script type="module" src="./user-check.js"></script>
 
 </html>
