--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
             <a href="Geometry.html"> UNIT 3 </a>
             <a href="Trigonometry.html"> UNIT 4 </a>
         </div>
-        <button id="log-out-button"> Log out </button>
+        <div>
+            <img id="user-photo">
+            <button id="log-out-button"> Log out </button>
+        </div>
     </nav>
 
     <main>
@@ -61,6 +64,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 <script src="./Firebase.js"></script>
-<script src="./session.js"></script>
+<script type="module" src="./session.js"></script>
 
 </html>
