--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Math Reviewer</title>
+  <link rel="stylesheet" href="./home.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" href="./styles/navigation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
